# NeigeEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  game.json  main.cpp  scene0.json
default/: game.json  scene0.json
default/models/: cube.gltf  plane.gltf
default/scripts/: camera.lua  object.lua
default/shaders/: pbr.frag  pbr.vert
docs/: scripting.md  weightfunctions.md
docs/scripting/: index.md
docs/scripting/functions/: audio.md  camera.md  debug.md  entity.md  input.md  physics.md  time.md  ui.md  window.md
docs/scripting/types/: vector.md
docs/wboit/: weightfunctions.md
scripts/: camera.lua  gamecontroller.lua  objectcontroller.lua  test.lua
shaders/: alphaCompositing.frag  animatedPbr.vert  animated_pbr.frag  animated_pbr.vert  bloomBlur.frag  bloomDownscale.frag  brdfConvolution.frag  brdfConvolution.vert  color.frag  color.vert  color_b.frag  color_m.frag  convolve.frag  depthPrepass.vert  depthPrepassMask.frag  depthToNormals.frag  depthToPositions.frag  equiRecToCubemap.frag  equiRecToCubemap.vert  fullscreenTriangle.vert  fxaa.frag  passthrough.frag  pbr.frag  pbr.vert  pbr_b.frag  pbr_m.frag  pbr_t.frag  postProcess.frag  postProcessBloomOnly.frag  prefilter.frag  shadow.vert  shadowMask.frag  skybox.frag  skybox.vert  ssao.frag  ssaoBlur.frag  water.frag  water.vert  water_b.frag  water_m.frag
shaders/bloom/: bloomDownscale.frag
shaders/depthprepass/: depthPrepass.vert  depthPrepassMask.frag
shaders/envmap/: brdfConvolution.frag  cubemap.vert  skybox.frag
shaders/frustumculling/: frustumculling.comp
shaders/fxaa/: fxaa.frag
shaders/general/: fullscreenTriangle.vert  passthrough.frag
shaders/postprocess/: postProcess.frag  postProcessSSAOOnly.frag
shaders/shadowmapping/: shadow.vert  shadowMask.frag
shaders/ssao/: depthToNormals.frag  depthToPositions.frag  ssao.frag
shaders/ui/: text.frag
shaders/wboit/: alphaCompositing.frag  weightsFunctions.glsl
src/: Game.cpp  Game.h  NeigeTools.h  PhysicalDevice.h  Renderer.cpp  Renderer.h  Scene.h  Window.cpp  Window.h
src/audio/: Audio.cpp  Audio.h
src/audio/resources/: AudioChecks.h  AudioResources.h  AudioTools.cpp  AudioTools.h  Sound.cpp  Sound.h
src/ecs/: ECS.h
src/ecs/components/: Camera.h  Light.h  Renderable.h  Rigidbody.h  Script.h  Transform.cpp  Transform.h
src/ecs/systems/: CameraControls.cpp  CameraControls.h  CameraSystem.cpp  CameraSystem.h  Lighting.cpp  Lighting.h  PlayerControls.cpp  PlayerControls.h  Renderer.cpp  Renderer.h
src/graphics/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Fence.cpp  Fence.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderPass.cpp  RenderPass.h  RenderPassAttachment.cpp  RenderPassAttachment.h  Renderer.cpp  Renderer.h  Semaphore.cpp  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h
src/graphics/commands/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h
src/graphics/devices/: LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  PhysicalDevicePicker.cpp  PhysicalDevicePicker.h
src/graphics/effects/atmosphere/: Atmosphere.cpp  Atmosphere.h
src/graphics/effects/bloom/: Bloom.cpp  Bloom.h
src/graphics/effects/depthprepass/: DepthPrepass.cpp  DepthPrepass.h
src/graphics/effects/envmap/: Envmap.cpp  Envmap.h
src/graphics/effects/fxaa/: FXAA.cpp  (+1 more)
src/graphics/envmap/: Envmap.cpp  Envmap.h
src/graphics/instance/: Instance.cpp  Instance.h
src/graphics/models/: Model.cpp  Model.h
src/graphics/pipelines/: ComputePipeline.cpp  ComputePipeline.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Shader.cpp  Shader.h  Viewport.cpp  Viewport.h
src/graphics/renderpasses/: Framebuffer.cpp  Framebuffer.h  RenderPass.cpp  RenderPass.h  RenderPassAttachment.cpp  RenderPassAttachment.h  Swapchain.cpp  Swapchain.h
src/graphics/resources/: Buffer.cpp  Buffer.h  BufferTools.cpp  BufferTools.h  Image.cpp  Image.h  ImageTools.cpp  ImageTools.h  ModelLoader.cpp  ModelLoader.h  RendererResources.h  Samplers.h  ShaderResources.h  UIResources.h
src/graphics/shadowmapping/: Shadow.cpp  Shadow.h
src/graphics/ssao/: SSAO.cpp  SSAO.h
src/graphics/structs/: RendererStructs.h  ShaderStructs.h  UIStructs.h
src/graphics/sync/: Fence.cpp  Fence.h  Semaphore.cpp  Semaphore.h
src/inputs/: Inputs.h  KeyboardInputs.cpp  KeyboardInputs.h  MouseInputs.cpp  MouseInputs.h
src/physics/: AABB.cpp  AABB.h  Frustum.cpp  Frustum.h  Physics.cpp  Physics.h
src/scripting/: AudioScripting.cpp  AudioScripting.h  CameraScripting.cpp  CameraScripting.h  DebugScripting.cpp  DebugScripting.h  EntityScripting.cpp  EntityScripting.h  InputScripting.cpp  InputScripting.h  PhysicsScripting.cpp  PhysicsScripting.h  Scripting.cpp  Scripting.h  TimeScripting.cpp  TimeScripting.h  UIScripting.cpp  UIScripting.h  VectorScripting.cpp  VectorScripting.h  WindowScripting.cpp  WindowScripting.h
src/scripting/resources/: ScriptingResources.h
src/scripting/scripts/: audio.lua  camera.lua  debug.lua  entity.lua  input.lua  physics.lua  time.lua  ui.lua  vec2.lua  vec3.lua  vec4.lua  window.lua
src/utils/: AudioChecks.h  BufferTools.cpp  BufferTools.h  FileTools.cpp  FileTools.h  ImageTools.cpp  ImageTools.h  MemoryAllocator.cpp  MemoryAllocator.h  ModelLoader.cpp  ModelLoader.h  NeigeDefines.h  NeigeStructs.h  NeigeTools.h  NeigeVKTranslate.cpp  NeigeVKTranslate.h  Parser.cpp  Parser.h  PhysicalDevicePicker.cpp  PhysicalDevicePicker.h  RendererResources.h
src/utils/memoryallocator/: MemoryAllocator.cpp  MemoryAllocator.h
src/utils/resources/: AudioTools.cpp  AudioTools.h  BufferTools.cpp  BufferTools.h  FileTools.cpp  FileTools.h  ImageTools.cpp  ImageTools.h  ModelLoader.cpp  ModelLoader.h
src/utils/structs/: ModelStructs.h  RendererStructs.h  ShaderStructs.h
src/window/: Surface.cpp  Surface.h  Window.cpp  Window.h  WindowResources.h
(+31 files in other folders)
